# data_agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  Sandboxfile  ZHIPUAI_INTEGRATION.md  proposal.md  pyproject.toml  railway.toml  requirements.txt  run.sh  run_zhipu.bat  run_zhipu.sh  start.sh  test_zhipu.py
.claude/: settings.json
docs/: README.md  TEST_CASES.md  ZHIPUAI_USAGE.md  backend-design.md  configuration.md  web-frontend-design.md  web-frontend-test-plan.md
docs/plans/: data-platform-architecture.md
examples/: basic_usage.py
src/data_agent/: __init__.py  __main__.py  main.py
src/data_agent/agent/: __init__.py  backend.py  compactor.py  core.py  deep_agent.py  executor.py  factory.py  llm.py  multi_agent.py  plan_executor.py  zhipu_llm.py
src/data_agent/agent/middleware/: __init__.py  subagent_monitor.py
src/data_agent/agent/subagents/: __init__.py  data_analyzer.py  data_collector.py  report_writer.py
src/data_agent/api/: __init__.py  chat.py  copilot.py  main.py  websocket.py
src/data_agent/api/routes/: __init__.py  database.py  files.py  modes.py  sessions.py
src/data_agent/cli/: __init__.py  sync_cli.py
src/data_agent/commands/: __init__.py  base.py  mode_commands.py  registry.py  reload_command.py
src/data_agent/config/: __init__.py  agents.yaml  loader.py  modes.py  prompts.py  schema.py  settings.py  watcher.py
src/data_agent/config/prompts/: coordinator.md  data_analyzer.md  data_collector.md  data_processor.md  report_writer.md
src/data_agent/dag/: __init__.py  generator.py  models.py  visualizer.py
src/data_agent/sandbox/: __init__.py  microsandbox.py
src/data_agent/session/: __init__.py  manager.py
src/data_agent/state/: __init__.py  graph_state.py
src/data_agent/tools/: __init__.py  dagster_tools.py  data_tools.py  graph_tools.py  ml_tools.py  python_tools.py  registry.py  sql_tools.py
src/data_agent/ui/: __init__.py  formatters.py  pager.py
tests/: test_cli_interaction.py  test_dagster_e2e.py  test_deepagent.py  test_mysql_e2e.py  test_sandbox.py
web/: TESTING.md  jest.config.js  jest.setup.js  netlify.toml  package-lock.json  package.json  playwright.config.ts  vercel.json
web/e2e/: app.spec.ts
web/playwright-report/: index.html
web/src/__tests__/components/: ChatSidebar.test.tsx  CodeViewer.test.tsx  DataTable.test.tsx  Header.test.tsx
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/chat/: route.ts
web/src/app/api/chat/reset/: route.ts
web/src/app/api/chat/stream/: route.ts
web/src/app/api/copilotkit/: route.ts
web/src/app/api/database/config/: route.ts
web/src/app/api/database/tables/: route.ts
web/src/app/api/database/tables/[tableName]/: route.ts
web/src/app/api/database/test/: route.ts
web/src/app/api/files/imports/: route.ts
web/src/app/api/files/imports/[filename]/: route.ts
web/src/app/api/files/imports/[filename]/download/: route.ts
web/src/app/api/files/imports/[filename]/preview/: route.ts
web/src/app/api/files/upload/: route.ts
web/src/app/api/modes/: route.ts
web/src/app/api/modes/[mode]/: route.ts
web/src/app/api/sessions/: route.ts
web/src/app/api/sessions/exports/: route.ts
web/src/app/api/sessions/exports/[filename]/download/: route.ts
web/src/app/api/sessions/exports/[filename]/preview/: route.ts
web/src/app/api/sessions/new/: route.ts
web/src/components/: Header.tsx
web/src/components/charts/: ChartRenderer.tsx
web/src/components/chat/: ChatSidebar.tsx
web/src/components/data-display/: CodeViewer.tsx  DataTable.tsx  FileContentRenderer.tsx
web/src/components/database/: DatabaseConfig.tsx
web/src/components/exports/: ExportsPanel.tsx
web/src/components/imports/: ImportsPanel.tsx  index.ts
web/src/components/modes/: ModeControl.tsx
web/src/components/sidebar/: Sidebar.tsx
web/src/components/tools/: PlanConfirmationTool.tsx  ToolUIRegistry.tsx
web/src/components/ui/: ExpandableContent.tsx
web/src/components/workspace/: MainWorkspace.tsx  SecondaryWorkspace.tsx  Workspace.tsx
web/src/hooks/: useWorkspaceContext.tsx
web/src/providers/: AssistantProvider.tsx  SessionProvider.tsx  ThemeProvider.tsx
web/src/styles/: tokens.ts
