[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-agent"
version = "0.2.0"
description = "基于DeepAgents框架的智能数据分析Agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Data Agent Team" }
]
keywords = ["agent", "data-analysis", "deepagents", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # 核心框架
    "deepagents>=0.1.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",

    # CLI
    "rich>=13.0.0",

    # 数据库
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",

    # 数据分析
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",

    # 机器学习
    "scikit-learn>=1.3.0",

    # 图分析
    "networkx>=3.0",

    # 沙箱
    "microsandbox>=0.1.0",

    # 工具
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Token 计数
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
data-agent = "data_agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/data_agent"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
