[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-agent"
version = "0.2.0"
description = "基于DeepAgents框架的智能数据分析Agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Data Agent Team" }
]
keywords = ["agent", "data-analysis", "deepagents", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # 核心框架
    "deepagents>=0.3.4",
    "langchain>=1.2.3",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.5",

    # Web API
    "fastapi>=0.115.0",
    "uvicorn>=0.40.0",

    # CLI
    "rich>=14.0.0",
    "prompt_toolkit>=3.0.52",

    # 数据库
    "sqlalchemy>=2.0.45",
    "pymysql>=1.1.2",
    "duckdb>=1.4.0",

    # 数据分析
    "pandas>=2.3.0",
    "numpy>=2.4.0",
    "scipy>=1.16.0",

    # 机器学习
    "scikit-learn>=1.8.0",

    # 图分析
    "networkx>=3.6.0",

    # 沙箱
    "microsandbox>=0.1.8",

    # 工具
    "python-dotenv>=1.2.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.0",

    # 热重载
    "watchdog>=4.0.0",

    # Token 计数
    "tiktoken>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pexpect>=4.9.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
data-agent = "data_agent.main:main_async"
data-agent-api = "data_agent.api.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/data_agent"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
markers = [
    "slow: 标记为慢速测试，需要真实的 Agent 执行"
]
